Change Energy name and submit button

--- a/index.html
+++ b/index.html
@@ -200,56 +200,56 @@
     "Company": "Airtime Holdings Pty Ltd",
     "Summary": "Undertake research and develop online calculators to reduce carbon emissions in high-rise buildings.",
     "Location": "Fortitude Valley",
-    "Sector": "Engergy",
+    "Sector": "Energy",
     "TypeID": 3
   },
   {
     "Company": "Galindo Torres,\nDr Sergio Andres",
     "Summary": "Pushing the boundaries of current numerical geotechnical modelling capabilities",
     "Location": "Brisbane",
-    "Sector": "Engergy",
+    "Sector": "Energy",
     "TypeID": 3
   },
   {
     "Company": "Konarova, Dr Muxina",
     "Summary": "Sustainable production of ethanol fuel from waste-gas",
     "Location": "Brisbane",
-    "Sector": "Engergy",
+    "Sector": "Energy",
     "TypeID": 3
   },
   {
     "Company": "Hu, Dr Shihu",
     "Summary": "Energy Positive Domestic Wastewater Treatment",
     "Location": "Brisbane",
-    "Sector": "Engergy",
+    "Sector": "Energy",
     "TypeID": 3
   },
   {
     "Company": "McCabe, \nAssociatiate Professor Bernadette",
     "Summary": "Process improvement of energy and value extraction from agro-industrial waste",
     "Location": "Toowoomba",
-    "Sector": "Engergy",
+    "Sector": "Energy",
     "TypeID": 3
   },
   {
     "Company": "Tritium",
     "Summary": "Funding will assist this world-leading Queensland business to bring its innovative tech products onto the market sooner. Their fast charging technology is providing drivers of electric vehicles greater convenience to charge their cars anywhere. With funding, they will expand their research and development, manufacturing and sales workforce, as well as finalise expansion at their new manufacturing facilities in Brisbane.",
     "Location": "Brisbane",
-    "Sector": "Engergy",
+    "Sector": "Energy",
     "TypeID": 3
   },
   {
     "Company": "Water, Dr Wayne",
     "Summary": "Making Solar Better: Advanced Electronics for Distributed Energy Storage",
     "Location": "Brisbane/Enogerra",
-    "Sector": "Engergy",
+    "Sector": "Energy",
     "TypeID": 3
   },
   {
     "Company": "Mishra, Dr Yateendra",
     "Summary": "Maximising renewable energy penetration through smart inverter deployment and control",
     "Location": "Brisbane",
-    "Sector": "Engergy",
+    "Sector": "Energy",
     "TypeID": 3
   },
   {
