--- a/index.html
+++ b/index.html
@@ -873,6 +873,9 @@ var n = data.length, // total number of circles
     })
     .on("click", elementOnClick)
     .on("mouseover", function(d) {
+
+      console.log(d);
+      d3.select(this).style("stroke", " rgba(164, 255, 255, 0.6)").style("stroke-width","10").style("stroke-opacity","0.6");
       var http = "<p class='title'>" + d.data.Company + "</p> <br/>" + "<p class='summary'>" +d.data.Summary +"</p> <br/>"+ "<p class='location'>" +d.data.Location +"</p>";
       div.transition()
       .duration(200)
@@ -882,6 +885,7 @@ var n = data.length, // total number of circles
       .style("top", (d3.event.pageY - 28) + "px");
     })
     .on("mouseout", function(d) {
+      d3.select(this).style("stroke", "none")
       div.transition()
       .duration(500)
       .style("opacity", 0);
