Remove sidebar scroll and update title

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </div>
   </header>
   <nav id="navSidebar" class="flex flex-column absolute r0 b0 mr4 mb4 right-align">
-  <h2 class="uppercase font-large grey mt0 medium">Innovation Types</h2>
+  <h2 class="uppercase font-large grey mt0 medium">Innovation Sectors</h2>
     <div class="sidebarContainer">
       <a class="innovation-type right-align border rounded"  style="color: #ff7f0e;">
         <h4 class="font-small mr1 my0 regular">Agriculture</h4>
