--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <a class="flex items-center mr4" href="https://twitter.com/home?status=Based%20in%20QLD?%20Working%20on%20an%20awesome%20project?%20Showcase%20it!%20%23PutItonTheMap%20%23govhack%20%40govhackBNE%20%0A">
         Share it on Twitter! Showcase your project to the world! #onTheMap
       </a>
-      <a id="addBtn" class="flex items-center action rounded white bg-grey-dark py2 px4" href="/add.html">
+      <a id="addBtn" class="flex items-center action rounded white bg-grey-dark py2 px4" href="https://billymwlei.github.io/govhack2016/add.html">
         Add your innovation
       </a>
     </div>
